--- a/public/assets/css/aeon_request_action.css
+++ b/public/assets/css/aeon_request_action.css
@@ -1,6 +1,7 @@
 #disabled-button-wrapper {
   display: inline-block;
   cursor: not-allowed;
+  display:none;
 }
 
 #disabled-button-wrapper .btn[disabled] {
@@ -15,4 +16,8 @@
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+button[title] {
+  color:#337ab7;
 }
